<resources>
    <string name="app_name">LanguageApp</string>
    <string name="hello_world">Hello World</string>
    <string name="riceTitle">RICE</string>
    <string name="appName">KRISHI SAHAYAK</string>
    <string name="harvesting">HARVESTING</string>
    <string name="irrigation">IRRIGATION</string>
    <string name="fertilizers_and_pesticides">Fertilizers and Pesticides</string>
    <string name="land_preparation_and_methods">LAND PREPARATION AND METHODS</string>
    <string name="soil_requirements">SOIL REQUIREMENTS</string>
    <string name="riceSoilRequirements">"Rice farming can be done on a different variety of soil like as silts, loams, gravels, acidic and alkaline soils. The deep fertile clayey (rich in organic matter) and loamy soils are considered as an ideal soil or growing rice crop. In rice, farming Propagation is done through rice seeds. "</string>
    <string name="riceClimatic">Rice is a crop of tropical climate. However, it is also grown successfully in humid to sub-humid regions under subtropical and temperate climate. Rice is cultivated in almost all types of soils with varying productivity. Under high temperature, high humidity with sufficient rainfall and irrigation facilities, rice can be grown in any type of soil.</string>
    <string name="riceFertilizers"></string>
    <string name="riceFertilizer">* Chemical Fertilizers Nitrogen - 100 kg Phosphorus - 50 kg Potash - 50 kg * Micronutrients Zinc Sulphate - 20 kg Iron Sulphate - 12 kg Weedicides (Pre-emergence): 1. Butachlor 50 EC, 1 lt/acre (300 ltrs of water) 2. Saathi (Phyrazosulphuran Ethyl 100g/acre in 300 ltrs of water) http://www.rkmp.co.in/sites/default/files/ris/rice-state-wise/Status%20Paper%20on%20Rice%20in%20Karnataka.pdf</string>
    <string name="riceHarvesting">Harvesting rice consists of the basic operations which can be done in individual steps or in combination using a combine harvester. These include:  Reaping - cutting the mature panicles and straw above ground Threshing - separating the paddy grain from the rest of cut crop Cleaning - removing immature, unfilled, non-grain materials Hauling - moving the cut crop to the threshing location Field drying - leaving the cut crop in the field and exposing it to the sun for drying (optional) Stacking/piling - temporarily storing the harvested crop in stacks or piles (optional) Bagging - putting the threshed grain in bags for transport and storage Traditional harvesting activities such as field drying and stacking/piling are not recommended because they can lead to rapid quality deterioration and increased harvest losses.  Besides these, a variety of other activities can be included in harvesting such as gathering, reaping (gathering standing grain by cutting), bundling, and various forms of transporting the crop and grain.</string>
    <string name="riceIntro">"Rice is the processed form of paddy. Along with the husk, it is called paddy. Paddy cultivation is a complex process right from land preparation to harvesting of crops. Rice is a staple food in most parts of the world. But, with time there is a shortage of space and increase in demand for rice and other staple crops. So, cultivating rice is a very successful business. Reference: www.knowfarming.com Rice growing seasons and regions Major rice growing areas of the state can be broadly classified into two seasons, viz., kharif (June-July) and summer (January-February). In all the six rice growing ecosystems, Kharif sowing is common while during summer season the crop is cultivated mainly in the irrigated maidan areas of north and south. In the tank-fed areas, the crop is taken up late in the season (August-September) depending upon the monsoon showers. In coastal area, one can see a specific situation where a second crop is sown in September-October and harvested in JanuaryFebruary and the third crop is cultivated between December-January and March-April. In each district, nearly 60-80 per cent of the total area is covered during Kharif (wet) season while the remaining area is occupied in late Kharif and summer (dry) season. "</string>
    <string name="riceIrrigation">Paddy crop is strongly influenced by water supply. Water should be kept standing in the field throughout the growth period. In water scarcity areas, saturated soil in a chemical reduced stage is desirable. The characteristics of flooded soil which are conducive to high yields are: (i) greater availability of nutrients such as phosphorus, iron and manganese, (ii) suppression of weed competition, (iii) elimination of moisture stress as a limiting factor, (iv) micro-climate favourable to crop production.  Excess / limited / no water leads to reduction in yield. Rice a semi - aquatic plant requires near submergence Submergence helps in - suppressing weed growth  and more availability of certain nutrients Daily consumptive use of rice is 6 - 10mm Total water requirement of rice is 1200 - 1400 mm 2000 - 3000 litres of water required to produced 1kg of rice Highly saline and brakish water not good for irrigation Application of FYM or incorporation of green manures reduce adverse effects of excess salts Application of FYM or compost or green manures increases water holding capacity of light textured soils and thus saving of water Thorough puddling creates impermeable layer which reduces deep percolation losses Perfect leveling maintains uniform depth of water throughout field Maintenance of water depths in field as recommended for high water use efficiency and yield</string>
    <string name="riceLandPreparation">"There are basically three methods for land preparation in rice cultivation. The dry, semi-dry and Wet. •\tDry and Semi-dry system Generally, dry and semi-dry rice cultivation systems depend on the rain and it does not have complementary irrigation facilities. These two systems require good tilth land. Before sowing and planting uniformly apply farm yard manure (FMY)/compost for 2 weeks to 4 weeks. In this dry and semi-dry system seed should be sown by the drilling or broadcasting method. In drill sowing method row to row space is 20 cm to 25 cm. The dry and semi-dry system seed should be sown by the drilling or broadcasting method.The Drill Sowing method row to row space is 20 cm to 25 cm. References: https://agrifarmingtips.com "</string>
    <string name="rice_climatic_requirements">CLIMATIC REQUIREMENTS</string>
    <string name="horsegram">HORSEGRAM</string>
    <string name="horsegramIntro">Horse gram is one of the oldest pulse crops cultivated and consumed in India since centuries whose botanical name is “Macrotyloma uniflorum” and known as “hurule” in kannada. Horse gram is mainly cultivated in south India. Horse gram can be used in cooking’s and can be eaten as fresh sprouts. This grain is packed with high protein and this why race horses are fed with this pulse gram and became “horse gram”. This crop is mostly grown in dry lands. As these beans are having great nutrition values, these are uses as cattle field.</string>
    <string name="soil_health_mission">SOIL HEALTH MISSION</string>
    <string name="what_is_soil_health">What is Soil Health?</string>
    <string name="soilHealthIntro">Sustaining agricultural productivity depends on quality and availability of natural resources like soil and water. Agricultural growth can be sustained by promoting conservation and sustainable use of these scarce natural resources through appropriate location specific measures. The components of soils are mineral, organic matter, water and air, the proportions of which vary and together form a system for plant growth. Soils are studied and classified according to their use. Soil Testing is a part of the discipline of Fertilizer Use and Management.</string>
    <string name="soilHealthNutrientTitle">Nutrient Status of soils of Karnataka:</string>
    <string name="soilHealthNutrientIntro">"Intensive agriculture with introduction of improved varieties of seeds, application of fertilisers and assured irrigation has resulted in substantial growth in food grain production.  However, extensive use of fertilisers and use of improved varieties has resulted in greater mining of soil nutrients which intern resulted in depleting soil fertility, decline in water table, decrease in organic matter content and deterioration in soil health.    In 2012-13, Karnataka has consumed about 891.69 thousand tonnes  of Nitrogen, 389.64  thousand tonnes  of  P2O5 and   249.87 thousand tonnes K2O fertilizers at per ha consumption rate of 68.27 kg/ha of  N, 29.83 kg/ha of  P2O5, and 19.13 kg/ha of K2O fertilisers. Fertilizer consumption ratio has increased from 2.1:1.4:1 in 2009-10 to 3.6:1.6:1 in 2012-13.  "</string>
    <string name="soil_testing_programme">Soil Testing Programme</string>
    <string name="soilTestingIntro">There are 29 static soil testing laboratories functioning in Karnataka State with analyzing capacity of 2,00,000 soil samples per annum. District wise location is appended in Annexure III. The soil samples are analysed for pH, EC, Major nutrients like Available N, P, K, secondary nutrients like Sulphur and Magnesium and micronutrients such as Zn, Fe, Mn, Cu and Boron. Water samples are also analyzed for pH , EC, Sodium Absorption ratio (SAR), Ca, Mg, Co3, HCo3 , Cl2 to assess the quality of water for irrigation. Well qualified and experienced personnel are working as analysts to ensure the quality of analysis. Every year refresher training is arranged to the Analysts working in the laboratories to upgrade their knowledge and skill in soil and water analysis. The functioning of these Soil Health Centers (SHCs) are reviewed regularly every month by the concerned Joint Director of Agriculture at District level and also at Directorate of Agriculture, Bangalore.</string>
    <string name="the_soil_health_card">THE SOIL HEALTH CARD</string>
    <string name="soilHealthCardInfo">Soil health card is field-specific detailed report of soil fertility status and other important soil parameters that affect crop productivity. Besides, soil health, it also provides an advisory on soil test based use of fertilizers and amendments. State Government is planning to take the support of supplementary institutions for covering large number of holding to generate soil health cards. Their activity can be outsourced or the SHCs can be operated on a Public Private Partnership mode. Standard procedures for the operational work of sampling, analysis, information reports in soil health cards and distribution to farmers will be put in place by the State Government. Soils will be analysed for N, P, K, EC, pH , secondary nutrients and micro nutrients. Analysis of the massive scale of soil samples will be used to operationalise soil test based, District/Taluqa/Hobli/ Grampanchayat wise fertilisers, (organic and inorganic,) recommendation for supplementing deficiencies. District/ Taluqa/ Hobli/ Grampanchayat wise recommendations for various crops will make it easier to scale up dissemination to farmers and popularise various components of nutrient management for relevant crops. It is estimated that the cultivated area is 133.81 lakh hectares and there are about 78.32 lakh farm holdings in the state. To achieve the target in 2016-17 it is proposed to analyse 29.85 lakh soil samples for three years and 9.94 lakh soil sample per annum.</string>
    <string name="details_in_a_soil_card">Details in a Soil Card</string>
    <string name="detailsInASoilCardInfo">Details in a Soil Health Card i. Information regarding Soil Fertility ii. Dosage of fertilizer application in crops. iii. Information on soil amendments of saline or alkaline soil iv. Recommendation on integrated nutrient management.</string>
    <string name="rice">RICE</string>
    <string name="cow_pea">COW-PEA</string>
    <string name="horse_pea">HORSEGRAM</string>
    <string name="jowar">JOWAR</string>
    <string name="tur">TUR</string>
</resources>